--- a/package.json
+++ b/package.json
@@ -66,14 +66,20 @@
     "lodash": "=4.17.4"
   },
   "devDependencies": {
-    "@types/bn.js": "^4.11.6",
-    "@types/lodash": "^4.14.161",
-    "@types/node": "^14.10.2",
-    "bitcore-build": "https://github.com/snowgem/bitcore-build-snowgem",
+    "@types/assert": "^1.4.0",
+    "@types/bn.js": "^4.11.2",
+    "@types/chai": "^4.1.7",
+    "@types/elliptic": "^6.4.0",
+    "@types/lodash": "^4.14.118",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.8",
+    "bitcore-build": "https://github.com/bitpay/bitcore-build.git#d4e8b2b2f1e2c065c3a807dcb6a6250f61d67ab3",
     "brfs": "^1.2.0",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
-    "sinon": "^1.13.0"
+    "prettier": "^1.14.3",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.3"
   },
   "directories": {},
   "dist": {
