--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     }
   ],
   "dependencies": {
+    "@types/bs58": "^4.0.1",
     "blake2bts": "github:snowgem/blake2b",
     "bn.js": "^5.1.3",
-    "bs58": "^4.0.1",
     "buffer-compare": "=1.1.1",
     "elliptic": "^6.4.0",
     "inherits": "=2.0.1",
